CSS: Small fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ header {
   padding: 0 2rem;
   background-color: var(--color-white);
   color: var(--text-color);
+  margin-bottom: 2rem;
 }
 
 .header-logo {
@@ -115,16 +116,11 @@ main {
 }
 
 .main-title {
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 100%;
   margin-bottom: 0.5rem;
   background-color: transparent;
 }
 
 .main-subtitle {
-  font-size: 0.938rem;
-  font-weight: 700;
   background-color: transparent;
 }
 
@@ -240,7 +236,7 @@ main {
 }
 
 .filters-button i {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   color: var(--main-color);
   background-color: transparent;
 }
@@ -658,21 +654,18 @@ footer {
     justify-content: center;
     position: relative;
     width: 100%;
+    padding: 0 1.25em;
   }
 
   .search-field {
-    width: 100%;
     padding-right: 3.5rem;
     box-sizing: border-box;
   }
 
   .search-submit {
-    position: absolute;
-    right: 0;
     min-width: 3rem;
     width: 3rem;
     height: 3rem;
-    border-radius: 25%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   }
 
@@ -692,9 +685,6 @@ footer {
 
   .filters-button {
     margin-bottom: 0.5rem;
-  }
-
-  .filters-button {
   }
 
   .filters-info {
